@@ -37,7 +37,7 @@
 #include "TrkGeometry/HomogenousLayerMaterial.h"
 #include "TrkGeometry/OverlapDescriptor.h"
 //#include "TrkGeometry/SimplifiedMaterialProperties.h"
-#include "TrkMagFieldTools/IMagneticFieldTool.h"
+#include "TrkMagFieldInterfaces/IMagneticFieldTool.h"
 #include "TrkMagFieldUtils/MagneticFieldMode.h"
 #include "TrkMagFieldUtils/MagneticFieldMap.h"
 #include "TrkMagFieldUtils/MagneticFieldMapConstant.h"
