@@ -1,3 +1,7 @@
+2006-12-18 Sarka Todorova <sarka.todorova@cern.ch>
+	* cleanup
+	* tagged MuonTrackingGeometry-00-00-24
+
 2006-11-29 Sarka Todorova <sarka.todorova@cern.ch>
 	* CSC/TGC active layers added (one per gas gap)
 	* tagged MuonTrackingGeometry-00-00-23
